--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "dependencies": {
         "@inertiajs/react": "^2.0.2",
         "@metamask/sdk-react": "^0.32.0",
+        "@tanstack/react-query": "^5.66.0",
         "laravel-echo": "^1.19.0",
         "lodash": "^4.17.21",
         "pusher-js": "^8.4.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "socket.io-client": "^4.8.1",
-        "viem": "^2.22.10"
+        "viem": "^2.22.10",
+        "wagmi": "^2.14.11"
     }
 }
